# python-uv-template

./: README.md  TROUBLESHOOTING.md  cookiecutter.json
.github/ISSUE_TEMPLATE/: bug_report.md
{{cookiecutter.repo_name}}/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: check_and_tests.yml  codeql.yml  unit_tests.yml
{{cookiecutter.repo_name}}/src/{{cookiecutter.project_name}}/: hello_world.py
{{cookiecutter.repo_name}}/tests/: Dockerfile  conftest.py  coverage_test.sh
{{cookiecutter.repo_name}}/tests/src/{{cookiecutter.project_name}}/: test_hello_world.py
